<resources>
    <string name="app_name">コーヒー日記</string>
    <string name="mainLabel">日々、大量に飲むコーヒーのレシピ、豆や市販コーヒーの購入記録を付けられるアプリです。\n記録は超高度な統計手法で分析する・・・予定ですが、まだ工事中で、簡単なグラフくらいしかでません m(_ _)m</string>
    <string name="homehHistoryLabel">【改訂履歴】</string>
    <string name="homeHistoryText">■4.0(2024/08/08)\n・新しい端末でも動くようにライブラリアップデート\n\n■3.9(2024/06/13)\n・CBR(Coffee Brew Ratio）を入力できるように！\n・各種バグ修正（新機種でカメラが使えない、起動しないなど）\n\n■3.78(2024/01/05)\n・湯量入力バーを再度修正\n・最大湯量をメニューから選択\n・最大湯量に応じて、入力バーの刻みが変わる\n・刻み以外の数字も入力可能になりました！\n\n■3.76(2023/12/25)\n・湯量入力バーの動きをカイゼン（段階的に動かす）\n\n■3.75(2023/11/01)\n・各種並び替えで、昇順・降順ができるように\n・水量シークバーの移動ステップが細かすぎるの修正\n\n■3.7(2023/05/28)\n・統計画面でのクラッシュを解消しました！\n\n■3.67(2022/06/01)\n・豆購入量の上限を設定できるように変更\n\n■3.66(2022/02/20)\n・不具合修正（原産国入力でポップアップリストが出ない）\n\n■3.65(2022/02/15)\n・不具合修正（データ編集中の画面回転で写真喪失）\n・原産国を入力可能（手入力＆選択肢）\n・改訂履歴を表示\n\n■3.6(2022/02/10)\n・写真関係不具合が、ようやく解決！！\n　OS verにより写真アクセス方法が異なる\n　ことを学びました・・m(_ _)m\n\n・カメラ撮影、写真選択のどちらも大丈夫\n・スマホを回転させても落ちなくなりました\n・スクロール位置を覚えるようになりました\n\n■3.51(2021/12/10)・V3.5以降、OS verによって落ちています\n・原因究明中です・・・m(_ _)m\n・とりあえず、ライブラリを最新版にしてみました\n\n■3.5(2021/11/26)・豆やレシピの写真を添付できるように！\n\n■3.32(2021/10/22)・豆の購入量を細かく設定\n\n■3.31(2021/09/25)・バグ修正（ミルク・砂糖の表示不良）\n\n■3.3(2021/09/20)・同じ豆を再購入できる機能を追加！\n・過去の購入データのまとめ機能も搭載\n・同じ豆を使ったコーヒーのコメントを一覧表示\n・豆の☆評価を小数点表示\n・水量の単位を選択可能に\n\n■3.21(2021/05/18)・リスト表示の項目を選択可能に\n\n■3.2(2021/05/15)・リスト表示→数字表示\n・広範の要素で入力OFF、最小・最大値設定\n\n■3.1(2021/04/15)・抽出湯量、最大湯量(cc)追加\n・カップ数の非表示選択\n・ミル設定の選択(整数/小数)\n\n■3.0(2021/04/08)・設定画面登場\n・バックアップ機能\n・コーヒー器具の登録\n・各項目のON/OFF、最大値設定\n・フラット形式表示\n\n■2.65(1900/01/00)・不具合修正\n・シークバーで中間値が設定できない\n・砂糖やミルクの設定を数字→文字に統一\n\n■2.61(1900/01/00)・不具合修正\n・入力画面でシークバーが不要動作しないよう修正\n・グラフ範囲が広すぎるのを修正\n\n■2.6(1900/01/00)・統計画面にグラフを追加\n・豆の挽き具合をミルのネジ回転数でも指定\n・過去DBの破壊回避（RealmのMigrationを実装）\n\n■2.5(1900/01/00)・各画面で、日付順・評価順・価格順などのソート\n・期間中の飲んだ回数や評価など、統計画面\n・豆や外飲みの評価を、平均表示\n・カード型表示をコンパクト化\n・各種アイコンのサイズを統一\n・そのほか不具合改修\n\n■1.1(1900/01/00)・店飲みの利用回数を記録\n・店飲みの利用日付順にソート\n・シークバーのアンバランスを訂正\n\n■1.0(1900/01/00)・豆DBに加え、外飲み（コンビニ等）のDBを追加\n・コンビニやスタバなどでコーヒーの記録も可能\n・そのほか、各所細かい不具合修正\n\n■0.5(2020/06/25)初リリース。\n\n</string>
    <string name="title_home">ホーム</string>
    <string name="title_brews">コーヒー日記</string>
    <string name="title_beans">豆データ</string>
    <string name="title_takeout">商品データ</string>
    <string name="title_stats">コーヒー統計</string>
    <string name="title_config">設定</string>
    <string name="titleTakeoutListFromBtnv">市販コーヒーリスト編集</string>
    <string name="titleTakeoutListFromBrewEdit">市販コーヒーを選択してね</string>
    <string name="titleTakeoutDetails">市販コーヒーの詳細情報</string>
    <string name="titleTakeoutEditEdit">市販コーヒー情報の編集</string>
    <string name="titleTakeoutEditNew">市販コーヒー情報の作成</string>
    <string name="titleTakeoutEditCopy">コピーして作成</string>
    <string name="titleEquipListFromBtnv">器具データ一覧</string>
    <string name="titleEquipListFromBrewEdit">コーヒー器具を選択してね</string>
    <string name="titleEquipDetails">器具の詳細情報</string>
    <string name="titleEquipEditEdit">器具データの編集</string>
    <string name="titleEquipEditNew">コーヒー器具の作成</string>
    <string name="titleEquipEditCopy">コピーして作成</string>
    <string name="oneEquipBuyDateLabel">購入日：</string>
    <string name="oneEquipShop">購入店：</string>
    <string name="oneEquipMemo">メ　モ：</string>
    <string name="oneEquipPriceLabel">価　格：</string>
    <string name="oneEquipMakerLabel">メーカ：</string>
    <string name="oneEquipTypeLabel">型　式：</string>
    <string name="equipEditNameLabel">名　前：</string>
    <string name="equipEditNameHint">ドリップ、プレスなど</string>
    <string name="equipEditRatingLabel">評　価：</string>
    <string name="equipEditRatingHint">※使用して淹れたコーヒー\n　の評価で計算されます</string>
    <string name="equipEditMakerLabel">メーカ：</string>
    <string name="equipEditTypeLabel">型　式：</string>
    <string name="equipEditTypeHint">型式文字列</string>
    <string name="equipEditMakerHint">KALITA、BODUMなど</string>
    <string name="equipEditShopLabel">購入店：</string>
    <string name="equipEditShopHint">東急ハンズなど</string>
    <string name="equipEditPriceLabel">金　額：</string>
    <string name="equipEditPriceHint">1,000円など</string>
    <string name="equipEditMemoLabel">メ　モ：</string>
    <string name="equipEditMemoHint">メモ</string>
    <string name="equipEditDateLabel">購入日：</string>
    <string name="equipEditIconLabel">アイコン変更</string>
    <string name="equipEditCancelBtnLabel">キャンセル</string>
    <string name="equipEditNoticeHint">このアイテムは、自分で淹れたコーヒーと市販コーヒーを見分けるために使っているため、削除はできません。\n削除はできませんが、名前やアイコン、メモは変更可能です。</string>
    <string name="titleEquipIconSelect">器具のアイコンを選んでね</string>
    <string name="titleBrewList">コーヒー日記</string>
    <string name="titleBrewDetails">レシピ詳細</string>
    <string name="titleBrewEditEdit">レシピ編集</string>
    <string name="titleBrewEditNew">レシピ作成</string>
    <string name="titleBrewEditCopy">コピーして作成</string>
    <string name="titleBeansListFromBtnv">コーヒー豆リスト</string>
    <string name="titleBeansListFromBrewEdit">使用豆を選択してね</string>
    <string name="titleBeansDetails">豆の詳細情報</string>
    <string name="titleBeansEditEdit">豆情報の編集</string>
    <string name="titleBeansEditNew">豆情報の作成</string>
    <string name="titleBeansEditCopy">コピーして作成</string>
    <string name="titleBeansEditRepeat">同じ豆を再購入</string>
    <string name="copyBtnLabel">複製</string>
    <string name="editBtnLabel">編集</string>
    <string name="repeatBtnLabel">再購入</string>
    <string name="returnBtnLabel">キャンセル</string>
    <string name="editText">編集</string>
    <string name="copyText">コピー</string>
    <string name="deleteText">削除</string>
    <string name="brewDateFormat">yyyy/MM/dd HH:mm</string>
    <string name="dateFormat">%d/%02d/%02d</string>
    <string name="timeFormat">%02d:%02d</string>
    <string name="oneBrewMethodLabel">法:</string>
    <string name="oneBrewBeanLabel">豆:</string>
    <string name="oneBrewResultLabel">評:</string>
    <string name="oneBrewGrind">挽:</string>
    <string name="oneBrewBeanUse">豆:</string>
    <string name="oneBrewCupsLabel">杯:</string>
    <string name="oneBrewTemp">温:</string>
    <string name="oneBrewSteam">蒸:</string>
    <string name="oneBrewMemoLabel">メモ:</string>
    <string name="oneBrewShopLabel">購入:</string>
    <string name="brewDetailsHeaderText">詳細画面です（要らないか？）</string>
    <string name="brewEditHeaderText">スライダを多用したら、かえって入力しにくくなってゴメンナサイ・・・m(_ _)m</string>
    <string name="brewEditMethodLabel">使用器具</string>
    <string name="brewEditDateLabel">作った日</string>
    <string name="brewEditCupLabel">作った量\n(カップ)</string>
    <string name="brewEditBeansLabel">使用豆</string>
    <string name="brewEditGrindLabel">豆の\n挽き具合</string>
    <string name="brewEditBeansUseLabel">豆の量\n(g)</string>
    <string name="brewEditTempLabel">湯の温度\n(℃)</string>
    <string name="brewEditSteamLabel">蒸らし\n(秒)</string>
    <string name="brewEditMemoLabel">メモ</string>
    <string name="brewEditBrewImageLabel">おもひで</string>
    <string name="brewEditBrewImageBtnLabel">おもひで\n写真撮影</string>
    <string name="brewEditBrewImageSelectBtnLabel">画像選択</string>
    <string name="brewEditBrewImageDeleteBtnLabel">画像削除</string>
    <string name="brewEditRatingLabel">できばえ</string>
    <string name="brewEditBeansHint">例：ブルーマウンテン</string>
    <string name="brewEditSaveBtnLabel">保存</string>
    <string name="brewEditDeleteBtnLabel">削除</string>
    <string name="brewEditCancelBtnLabel">キャンセル</string>
    <string name="brewEditMemoHint">例：今までで一番おいしい</string>
    <string name="brewEditPriceLabel">値段</string>
    <string name="brewEditPriceHint">例：500</string>
    <string name="brewEditShopLabel">購入店</string>
    <string name="brewEditShopHint">例：銀座店</string>
    <string name="brewEditCupDrunkLabel">飲んだ量\n(カップ)</string>
    <string name="brewEditGrindSwitchLabel">挽き目\n設定方法</string>
    <string name="brewEditGrindSwitchRotationLabel">ミルのノッチ等で設定</string>
    <string name="brewEditGrindSwitchNameLabel">名前で設定</string>
    <string name="brewEditGrind2Label">ミル設定\n(ノッチ)</string>
    <string name="brewEditHotIceSwLabel">Hot/Ice</string>
    <string name="brewEditSugarLabel">砂糖</string>
    <string name="brewEditMilkLabel">ミルク</string>
    <string name="brewEditBrewTimeLabel">抽出時間\n(秒)</string>
    <string name="brewEditItemName">コーヒー</string>
    <string name="brewEditWaterVolumeLabel">お湯の量\n(%s)</string>
    <string name="brewEditCBRLabel">CBR\n(豆:湯)</string>
    <string name="brewEditDialogWaterVolume">お湯の量（%s）を入力</string>
    <string name="brewEditDialogCups">淹れたカップ数（杯）を入力</string>
    <string name="brewEditDialogCupsDrunk">飲んだカップ数（杯）を入力</string>
    <string name="brewEditDialogGrind2">挽度合い（ミルの設定値）を入力</string>
    <string name="brewEditDialogBeansUse">使用した豆の量（g）を入力</string>
    <string name="brewEditDialogTemp">お湯の温度（℃）を入力</string>
    <string name="brewEditDialogSteam">蒸らし時間（秒）を入力</string>
    <string name="brewEditDialogBrewTime">抽出時間（秒）を入力</string>
    <string name="brewEditDialogCBR">CBR(Coffee Brew Ratio)を入力</string>
    <string name="beansKindSpecial">ストレート</string>
    <string name="beansKindBlend">ブレンド</string>
    <string name="beansKindPack">ドリップパック</string>
    <string name="oneBeansBuyDateLabel">最新購入：</string>
    <string name="oneBeansShop">購入店　：</string>
    <string name="oneBeansGrindLabel">挽き：</string>
    <string name="oneBeansGramLabel">グラム：</string>
    <string name="oneBeansPriceLabel">円</string>
    <string name="oneBeansMemo">メ　モ：</string>
    <string name="oneBeansRoastLabel">焙煎度合：</string>
    <string name="oneBeansRepeatLabel">購入回数：</string>
    <string name="oneBeansCountLabel">飲んだ回数：</string>
    <string name="beansEditHeader">豆の購入記録です。代表的な豆銘柄はボタンから選択できるかもしれませぬ。</string>
    <string name="beansEditDateLabel">初回購入</string>
    <string name="beansEditRepeatDateLabel">最新購入</string>
    <string name="beansEditNameLabel">銘柄</string>
    <string name="beansEditRatingLabel">評価</string>
    <string name="beansEditShopLabel">購入店</string>
    <string name="beansEditRoastLabel">焙煎度合</string>
    <string name="beansEditProcessLabel">精製方法</string>
    <string name="beansEditRepeatLabel">購入回数</string>
    <string name="beansEditCountLabel">飲んだ回数</string>
    <string name="beansEditGramLabel">グラム</string>
    <string name="beansEditPriceLabel">お値段</string>
    <string name="beansEditMemoLabel">メモ</string>
    <string name="beansEditNameHint">例：マンデリン</string>
    <string name="beansEditShopHintLabel">例：KALDI銀座店</string>
    <string name="beansEditPriceHintLabel">例：800</string>
    <string name="beansEditNameBtnLabel">参照</string>
    <string name="beansEditMemoHint">例：アイスで飲むのが良い</string>
    <string name="beansEditRepeatHint">※自動計算です</string>
    <string name="beansEditCommentLabel">感想</string>
    <string name="beansEditDialogGram">豆の量（グラム）を入力</string>
    <string name="beansEditPhotoLabel">写真</string>
    <string name="beansEditCountryLabel">原産国</string>
    <string name="titleBeansMergeList">まとめたい豆を選んでください</string>
    <string name="mergeBtnLabel">まとめる</string>
    <string name="takeoutEditNameLabel">銘　柄</string>
    <string name="takeoutEditRatingLabel">評　価</string>
    <string name="takeoutEditShopLabel">購入店</string>
    <string name="takeoutEditChainLabel">系　列</string>
    <string name="takeoutEditPriceLabel">お値段</string>
    <string name="takeoutEditMemoLabel">メ　モ</string>
    <string name="takeoutEditNameHint">例：マンデリン</string>
    <string name="takeoutEditShopHintLabel">例：ＮＹ駅前店</string>
    <string name="takeoutEditChainHintLabel">例：スターバックス</string>
    <string name="takeoutEditPriceHintLabel">例：800</string>
    <string name="takeoutEditNameBtnLabel">参照</string>
    <string name="takeoutEditMemoHint">例：特売でした（＾＾）</string>
    <string name="takeoutEditSizeLabel">サイズ</string>
    <string name="takeoutEditSizeHint">例：ラージ</string>
    <string name="config_appearance_header">見た目の設定</string>
    <string name="config_list_look_label">リストの形式</string>
    <string name="config_database_header">各種データベースの設定</string>
    <string name="config_takeout_db">市販コーヒーデータの編集</string>
    <string name="config_equip_db">器具データの編集</string>
    <string name="config_backup_db">全データのバックアップ</string>
    <string name="config_restore_db">全データのレストア</string>
</resources>