<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_brews"
        android:icon="@drawable/cup300"
        android:title="@string/title_brews" />

    <item
        android:id="@+id/navigation_beans"
        android:icon="@drawable/beans150"
        android:title="@string/title_beans" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/graph"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_config"
        android:icon="@drawable/config2"
        android:title="@string/title_config" />
</menu>