<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/takeoutEditLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.takeout.TakeoutEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/takeoutEditToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="コーヒー豆情報編集" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/takeoutEditCancelBtn"
        app:layout_constraintTop_toBottomOf="@+id/takeoutEditToolbar"
        tools:layout_editor_absoluteX="44dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/takeoutEditNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/takeoutEditNameLabel"
                app:layout_constraintBaseline_toBaselineOf="@+id/takeoutEditNameEdit"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/takeoutEditNameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:hint="@string/takeoutEditNameHint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/takeoutEditSelectBtn"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/takeoutEditRatingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/takeoutEditRatingLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeoutEditNameLabel" />

            <RatingBar
                android:id="@+id/takeoutEditRatingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:progressBackgroundTint="@color/ratingBackColor"
                android:progressTint="@color/ratingColor"
                app:layout_constraintBottom_toBottomOf="@+id/takeoutEditRatingLabel"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/takeoutEditRatingLabel" />

            <TextView
                android:id="@+id/takeoutEditShopLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/takeoutEditShopLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeoutEditChainLabel" />

            <TextView
                android:id="@+id/takeoutEditChainLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/takeoutEditChainLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeoutEditSizeLabel" />

            <EditText
                android:id="@+id/takeoutEditChainEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/takeoutEditShopHintLabel"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@+id/takeoutEditChainLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/takeoutEditShopEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/takeoutEditChainHintLabel"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@+id/takeoutEditShopLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <TextView
                android:id="@+id/takeoutEditPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/takeoutEditPriceLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeoutEditShopLabel" />

            <EditText
                android:id="@+id/takeoutEditPriceEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/takeoutEditPriceHintLabel"
                android:inputType="number|text"
                app:layout_constraintBaseline_toBaselineOf="@+id/takeoutEditPriceLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <TextView
                android:id="@+id/takeoutEditMemoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/takeoutEditMemoLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeoutEditPriceLabel" />

            <EditText
                android:id="@+id/takeoutEditMemoEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/takeoutEditMemoHint"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@+id/takeoutEditMemoLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/takeoutEditSizeEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/takeoutEditSizeHint"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@+id/takeoutEditSizeLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <TextView
                android:id="@+id/takeoutEditSizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/takeoutEditSizeLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeoutEditRatingLabel" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="65dp" />

            <Button
                android:id="@+id/takeoutEditSelectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/takeoutEditNameBtnLabel"
                app:layout_constraintBaseline_toBaselineOf="@+id/takeoutEditNameEdit"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/takeoutEditCancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/brewEditCancelBtnLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/takeoutEditSaveBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/takeoutEditSaveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/brewEditSaveBtnLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/takeoutEditCancelBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>